syntax = "proto3";

package api;
option csharp_namespace = "API.Interfaces";

import "location.proto";
import "optional.proto";

message OfferDto {
    OptionalString id = 1;
    GeoPointDto geoPoint = 2;
}

message OfferMapItemDto {
    string offerId = 1;
    GeoPointDto geoPoint = 2;
}